@@ -27,6 +27,8 @@ h3. Version 1.0 (Pipes -- NOT OFFICIALLY RELEASED YET)
 * Separated @Row@ from @Table@ so it can be reused by other pipes (e.g. @SelectPipe@)
 * Heavily reworked @PipesFluentPipeline@ JavaDoc to make it a single point of reference
 * Updated @LoopPipe@ semantics such that if there is an emit function, then the final object in a while isn't returned
+* Updated @GroupCountFunctionPipe@ semantics such that the value-function gets a @Pair@ containing incoming object and last value for that object
+* Reorganized the @com.tinkerpop.pipes.util@ package
 
 ==<hr/>==
 
